--- a/index.html
+++ b/index.html
@@ -4,42 +4,43 @@
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<!-- Header Start -->
-	<div class="container">
-		<div id="header">
-			<div class="flexrow">
-				<div id="socialicons">
-					<ul class="list">
-						<li>fb</li>
-						<li>tw</li>
-						<li>li</li>
-						<li>g+</li>
-					</ul>
-				</div>
-				<div id="searchbar">
-					<input class="pull-right" type="text" name="searchbar">
-				</div>
-			</div>
-			<div id="menu">
+	
+	<div id="header">
+		<div class="flexrow">
+			<div id="socialicons">
 				<ul class="list">
-					<li>Home</li>
-					<li>About</li>
-					<li>Resume</li>
-					<li>Web Work</li>
-					<li>Background</li>
-					<li>Blog</li>
-					<li>Contact Us</li>
+					<li>fb</li>
+					<li>tw</li>
+					<li>li</li>
+					<li>g+</li>
 				</ul>
-				<div id="headertext">
-					<h2>Entreprenuer. Engineer.</h2>
-					<input type="submit" name="Learn More"/>
-				</div>
+			</div>
+			<div id="searchbar">
+				<input class="pull-right" type="text" name="searchbar">
+			</div>
+		</div>
+		<div id="menu">
+			<ul class="list">
+				<li>Home</li>
+				<li>About</li>
+				<li>Resume</li>
+				<li>Web Work</li>
+				<li>Background</li>
+				<li>Blog</li>
+				<li>Contact Us</li>
+			</ul>
+			<div id="headertext">
+				<h2>Entreprenuer. Engineer.</h2>
+				<input type="submit" name="Learn More"/>
 			</div>
 		</div>
 	</div>
+
 	<!-- Header End -->
 
 	<!-- About Me -->
-	<div class="container">
+<div class="container-fluid">	
+	<div class="container-fluid">
 		<div class="col-sm-6">
 			<img class="pull-right" src="img/face.png" />
 		</div>
@@ -52,7 +53,7 @@
 	</div>
 	<!-- End About Me -->
 	<!-- Highlighted Sections -->
-	<div class="container text-center highlights">
+	<div class="container-fluid text-center highlights">
 		<div class="flexrow">
 			<div class="col-sm-4 blue-col">
 				<img src="img/resume.png" />
@@ -89,23 +90,20 @@
 	</div>
 	<!-- End Highlighted Sections -->
 	<!-- Gallery -->
-	<div class="container text-center">
+	<div class="container-fluid text-center gallery">
 		<h2>Our Gallery</h2>
 	</div>
 	<!-- End Gallery -->
 	<!-- Blogs -->
-	<div class="container text-center">
+	<div class="container-fluid text-center">
 		<h2>Recent Blogs</h2>
-	</div>
-	<div class="container text-center">
-		
 		<div class="flexrow">
-			<div class="col-sm-4 blue-col">
-				<picture>
-					<source srcset="https://via.placeholder.com/278x100/09f/fff.png">
-						<img src="https://via.placeholder.com/278/09f/fff.png" style="width:auto;">
-				</picture>
+			<div class="col-sm-4">
 				<div class="blog_card">
+					<picture>
+						<source srcset="https://via.placeholder.com/278x100/09f/fff.png">
+							<img src="https://via.placeholder.com/278/09f/fff.png" style="width:auto;">
+					</picture>
 					<h3>Mountain Views</h3>
 					<p>Over 10 years experience. Java, C#, C++ just to name a few, as well as a plethora of web technologies like HTML, CSS, Javascript. Web content management systems include Adobe CQ5 / AEM and Wordpress</p>
 					<input type="submit" value="Read More"/>
@@ -113,11 +111,11 @@
 				
 			</div>
 			<div class="col-sm-4 blue-col">
-				<picture>
-					<source srcset="https://via.placeholder.com/278x100/09f/fff.png">
-						<img src="https://via.placeholder.com/278/09f/fff.png" style="width:auto;">
-				</picture>
-				<div class="blog_card">
+					<div class="blog_card">
+					<picture>
+						<source srcset="https://via.placeholder.com/278x100/09f/fff.png">
+							<img src="https://via.placeholder.com/278/09f/fff.png" style="width:auto;">
+					</picture>
 					<h3>Mountain Views</h3>
 					<p>Over 10 years experience. Java, C#, C++ just to name a few, as well as a plethora of web technologies like HTML, CSS, Javascript. Web content management systems include Adobe CQ5 / AEM and Wordpress</p>
 					<input type="submit" value="Read More"/>
@@ -126,11 +124,11 @@
 				
 			</div>
 			<div class="col-sm-4 blue-col">
-				<picture>
-					<source srcset="https://via.placeholder.com/278x100/09f/fff.png">
-						<img src="https://via.placeholder.com/278/09f/fff.png" style="width:auto;">
-				</picture>
 				<div class="blog_card">
+					<picture>
+						<source srcset="https://via.placeholder.com/278x100/09f/fff.png">
+							<img src="https://via.placeholder.com/278/09f/fff.png" style="width:auto;">
+					</picture>
 					<h3>Mountain Views</h3>
 					<p>Over 10 years experience. Java, C#, C++ just to name a few, as well as a plethora of web technologies like HTML, CSS, Javascript. Web content management systems include Adobe CQ5 / AEM and Wordpress</p>
 					<input type="submit" value="Read More"/>
@@ -141,10 +139,10 @@
 	</div>
 	<!-- End BLogs -->
 	<!-- Testimonials -->
-	<div class="container text-center">
+	<div class="container-fluid text-center">
 		<h2>Testimonials</h2>
 	</div>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="col-sm-4">
 			Test 1
 		</div>
@@ -157,10 +155,10 @@
 	</div>
 	<!-- End Testimonials -->
 	<!-- Contact me -->
-	<div class="container text-center">
+	<div class="container-fluid text-center">
 		<h2>Contact Me</h2>
 	</div>
-	<div class="container">
+	<div class="container-fluid">
 		<div class="col-sm-4">
 			<ul>
 				<li>Address</li>
@@ -180,22 +178,23 @@
 				<input class="contact_short" type="text" name="email"/>
 				<textarea class="contact_long" name="message">Leave us a message</textarea> 
 				<input type="submit" name="submit"/>
+			</form>
 		</div>
 	</div>
+</div>
 	<!-- End Contact -->
 	<!-- Footer -->
-	<div class="container">
-		<div id="footer">
-			<ul class="list">
-				<li>fb</li>
-				<li>ins</li>
-				<li>tw</li>
-				<li>li</li>
-				<li>g+</li>
-				<li>em</li>
-			</ul>
-			<p>John Zeren &copy; 2020 All Rights Reservied. Privacy Policy | Terms and Conditions</p>
-		</div>
+	<div id="footer">
+		<ul class="list">
+			<li>fb</li>
+			<li>ins</li>
+			<li>tw</li>
+			<li>li</li>
+			<li>g+</li>
+			<li>em</li>
+		</ul>
+		<p>John Zeren &copy; 2020 All Rights Reservied. Privacy Policy | Terms and Conditions</p>
 	</div>
 	<!-- End Footer-->
+
 </html>
