Worked on header items.

--- a/index.html
+++ b/index.html
@@ -6,33 +6,39 @@
 	<!-- Header Start -->
 	
 	<div id="header">
-		<div class="flexrow">
-			<div id="socialicons">
+		<div class="top_row">
+			<div class="flexrow">
+				<div id="socialicons">
+					<ul class="list">
+						<li>fb</li>
+						<li>tw</li>
+						<li>li</li>
+						<li>g+</li>
+					</ul>
+				</div>
+				<div id="headerlogo">
+					<img src="./img/headerlogo.png"/>
+				</div>
+				<div id="searchbar">
+					<input class="pull-right" type="text" name="searchbar">
+				</div>
+			</div>
+			<div id="menu">
 				<ul class="list">
-					<li>fb</li>
-					<li>tw</li>
-					<li>li</li>
-					<li>g+</li>
+					<li>Home</li>
+					<li>About</li>
+					<li>Resume</li>
+					<li>Web Work</li>
+					<li>Background</li>
+					<li>Blog</li>
+					<li>Contact Us</li>
 				</ul>
 			</div>
-			<div id="searchbar">
-				<input class="pull-right" type="text" name="searchbar">
-			</div>
 		</div>
-		<div id="menu">
-			<ul class="list">
-				<li>Home</li>
-				<li>About</li>
-				<li>Resume</li>
-				<li>Web Work</li>
-				<li>Background</li>
-				<li>Blog</li>
-				<li>Contact Us</li>
-			</ul>
-			<div id="headertext">
+		<div id="headertext">
 				<h2>Entreprenuer. Engineer.</h2>
-				<input type="submit" name="Learn More"/>
-			</div>
+				<p>WOrked across multiple business unites as a software engineer and implimentation consultant.</p>
+				<input type="submit" value="Learn More"/>
 		</div>
 	</div>
 
