More work on header. Getting hover state on menu, search bar progress, container progress.

--- a/index.html
+++ b/index.html
@@ -6,39 +6,53 @@
 	<!-- Header Start -->
 	
 	<div id="header">
-		<div class="top_row">
-			<div class="flexrow">
-				<div id="socialicons">
-					<ul class="list">
-						<li>fb</li>
-						<li>tw</li>
-						<li>li</li>
-						<li>g+</li>
-					</ul>
-				</div>
-				<div id="headerlogo">
-					<img src="./img/headerlogo.png"/>
-				</div>
-				<div id="searchbar">
-					<input class="pull-right" type="text" name="searchbar">
+		<div class="header_wrap container-fluid">
+			<div class="top_row">
+				<div class="flexrow">
+					<div class="top_left">
+						<div class="socialicons">
+							<ul class="list">
+								<li>fb</li>
+								<li>tw</li>
+								<li>li</li>
+								<li>g+</li>
+							</ul>
+						</div>
+						<div>
+							<ul class="list menu_list">
+								<li>ABOUT</li>
+								<li>RESUME</li>
+								<li>WEB WORK</li>
+							</ul>
+						</div>
+					</div>
+					<div id="headerlogo">
+						<img src="./img/headerlogo.png"/>
+					</div>
+					<div class="top_right">
+						<div class="searchbar">
+							<form id="search-form">
+							    <div class="search">
+							      <input type="text" name="search" class="round" value="Search" />
+							      <input type="submit" class="corner" value="" />
+							    </div>
+							</form>
+						</div>
+						<div>
+							<ul class="list menu_list">
+								<li>BACKGROUND</li>
+								<li>BLOG</li>
+								<li>CONTACT US</li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</div>
-			<div id="menu">
-				<ul class="list">
-					<li>Home</li>
-					<li>About</li>
-					<li>Resume</li>
-					<li>Web Work</li>
-					<li>Background</li>
-					<li>Blog</li>
-					<li>Contact Us</li>
-				</ul>
+			<div id="headertext">
+					<h2>ENGINEER. ENTREPRENEUR.</h2>
+					<p>WOrked across multiple business unites as a software engineer and implimentation consultant.</p>
+					<input type="submit" value="Learn More"/>
 			</div>
-		</div>
-		<div id="headertext">
-				<h2>Entreprenuer. Engineer.</h2>
-				<p>WOrked across multiple business unites as a software engineer and implimentation consultant.</p>
-				<input type="submit" value="Learn More"/>
 		</div>
 	</div>
 
