Start adding social icons. Updated icons for highlights section.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 					<div class="top_left">
 						<div class="socialicons">
 							<ul class="list">
-								<li>fb</li>
-								<li>tw</li>
-								<li>li</li>
-								<li>g+</li>
+								<li><a href="#"><img src="./img/Facebook.png"/></a></li>
+								<li><a href="#"><img src="./img/Twitter.png"/></a></li>
+								<li><a href="#"><img src="./img/Google.png"/></a></li>
+								<li><a href="#"><img src="./img/Pinterest.png"/></a>+</li>
 							</ul>
 						</div>
 						<div>
@@ -86,13 +86,13 @@
 				</div>
 
 				<div class="col-sm-4 blue-col">
-					<img src="img/resume.png" />
+					<img src="img/webwork.png" />
 					<br/>
 					Webwork
 					<p>My web work is a mini-portfoloi of some of the websites I have either designed, coded, or both. This work is outside of my day to day 9 to 5 work and is mostly just for fun...</p>
 				</div>
 				<div class="col-sm-4 blue-col">
-					<img src="img/resume.png" />
+					<img src="img/blog.png" />
 					<br/>
 					Blog
 					<p>Read about what makes me tick. Topics range from tech to food to music, entertainment and back. Anything is fair game here. Feel free to comment on the post to keep topics alive</p>
