Fixed menu hover issue and added button cta.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 								<li><a href="#"><img src="./img/Pinterest.png"/></a>+</li>
 							</ul>
 						</div>
-						<div>
-							<ul class="list menu_list">
+						<div class="menu_list">
+							<ul class="list">
 								<li>ABOUT</li>
 								<li>RESUME</li>
 								<li>WEB WORK</li>
@@ -37,8 +37,8 @@
 							    </div>
 							</form>
 						</div>
-						<div>
-							<ul class="list menu_list">
+						<div class="menu_list">
+							<ul class="list">
 								<li>BACKGROUND</li>
 								<li>BLOG</li>
 								<li>CONTACT US</li>
@@ -50,10 +50,13 @@
 			<div id="headertext">
 					<h2>ENGINEER. ENTREPRENEUR.</h2>
 					<p>WOrked across multiple business unites as a software engineer and implimentation consultant.</p>
-					<input type="submit" value="Learn More"/>
+					<div class="orange-cta">READ MORE</div>
 			</div>
 		</div>
+		<div class="toptransition">
+		</div>
 	</div>
+
 	<!-- Header End -->
 
 	<!-- About Me -->
@@ -76,6 +79,8 @@
 
 	<!-- Highlighted Sections -->
 	<div class="highlights">
+		<div class="bottomtransition">
+		</div>
 		<div class="container-fluid text-center">
 			<div class="flexrow">
 				<div class="col-sm-4 blue-col">
