--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 						</div>
 					</div>
 					<div id="headerlogo">
-						<img src="./img/headerlogo.png"/>
+						<img src="./img/logo.png"/>
 					</div>
 					<div class="top_right">
 						<div class="searchbar">
 							<form id="search-form">
 							    <div class="search">
-							      <input type="text" name="search" class="round" value="Search" />
-							      <input type="submit" class="corner" value="" />
+							      <input type="text" name="search" class="searchbox" value="Search" />
+							      <input type="submit" class="searchbutton" value="" />
 							    </div>
 							</form>
 						</div>
