--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 	<!-- About Me -->
 	<div class="about">
 		<div class="container-fluid">	
-			<div class="container-fluid">
-				<div class="col-sm-6">
-					<img class="pull-right" src="img/face.png" />
-				</div>
-				<div class="col-sm-6">
-					<h2>About Me</h2>
-					<h3>JOHN ZEREN</h3>
-					<hr/>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus eu dolor ac tempor. Etiam pharetra mauris vel tristique vehicula. Fusce eleifend odio eget nisi dapibus consectetur. Proin eu convallis nunc, sit amet semper risus. Pellentesque at facilisis purus. Etiam et lorem placerat, consequat ligula in, euismod mauris. Ut in elit eu elit finibus finibus id eget ipsum. Donec a est diam. Fusce facilisis nisi id nunc convallis, sed convallis lorem congue. Nulla facilisi. Vestibulum neque quam, mattis ac ligula vel, consectetur consectetur metus. Morbi aliquam orci sit amet velit suscipit tincidunt. Etiam condimentum efficitur mi, et elementum augue placerat non. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				</div>
+			<div class="col-sm-6 about-image">
+					<img src="img/face.png" />
+			</div>
+			<div class="col-sm-6 about-text">
+				
+				<h2>About Me</h2>
+				<h3>JOHN ZEREN</h3>
+				<hr/>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus eu dolor ac tempor. Etiam pharetra mauris vel tristique vehicula. Fusce eleifend odio eget nisi dapibus consectetur. Proin eu convallis nunc, sit amet semper risus. Pellentesque at facilisis purus. Etiam et lorem placerat, consequat ligula in, euismod mauris. Ut in elit eu elit finibus finibus id eget ipsum. Donec a est diam. Fusce facilisis nisi id nunc convallis, sed convallis lorem congue. Nulla facilisi. Vestibulum neque quam, mattis ac ligula vel, consectetur consectetur metus. Morbi aliquam orci sit amet velit suscipit tincidunt. Etiam condimentum efficitur mi, et elementum augue placerat non. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+				<div class="blue-cta">READ MORE</div>
 			</div>
 		</div>
 	</div>
