Clean up images and buttons.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 			</div>
 			<div id="headertext">
 					<h2>ENGINEER. ENTREPRENEUR.</h2>
-					<p>WOrked across multiple business unites as a software engineer and implimentation consultant.</p>
-					<div class="orange-cta">READ MORE</div>
+					<p>WOrked across multiple business unites as a software engineer and implimentation consultant. <a href="#">sometext</a></p>
+
+					<a class="no-hover no-visited no-focus" href="#"><span class="orange-cta">READ MORE</span></a>
 			</div>
 		</div>
 		<div class="toptransition">
@@ -71,7 +72,7 @@
 				<h3>JOHN ZEREN</h3>
 				<hr/>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus eu dolor ac tempor. Etiam pharetra mauris vel tristique vehicula. Fusce eleifend odio eget nisi dapibus consectetur. Proin eu convallis nunc, sit amet semper risus. Pellentesque at facilisis purus. Etiam et lorem placerat, consequat ligula in, euismod mauris. Ut in elit eu elit finibus finibus id eget ipsum. Donec a est diam. Fusce facilisis nisi id nunc convallis, sed convallis lorem congue. Nulla facilisi. Vestibulum neque quam, mattis ac ligula vel, consectetur consectetur metus. Morbi aliquam orci sit amet velit suscipit tincidunt. Etiam condimentum efficitur mi, et elementum augue placerat non. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				<div class="blue-cta">READ MORE</div>
+				<a class="no-hover no-visited no-focus" href="#"><span class="blue-cta">READ MORE</span></a>
 			</div>
 		</div>
 	</div>
@@ -85,34 +86,26 @@
 			<div class="flexrow">
 				<div class="col-sm-4 blue-col">
 					<img src="img/resume.png" />
-					<br/>
-					Resume
+					<h4>RESUME</h4>
 					<p>Over 10 years experience. Java, C#, C++ just to name a few, as well as a plethora of web technologies like HTML, CSS, Javascript. Web content management systems include Adobe CQ5 / AEM and Wordpress</p>
+					<div class="spacer"></div>
+					<a class="no-hover no-visited no-focus" href="#"><span class="orange-border-cta">READ MORE</span></a>
 				</div>
 
 				<div class="col-sm-4 blue-col">
 					<img src="img/webwork.png" />
-					<br/>
-					Webwork
+					<h4>WEBWORK</h4>
 					<p>My web work is a mini-portfoloi of some of the websites I have either designed, coded, or both. This work is outside of my day to day 9 to 5 work and is mostly just for fun...</p>
+					<div class="spacer"></div>
+					<a class="no-hover no-visited no-focus" href="#"><span class="orange-border-cta">READ MORE</span></a>
+					
 				</div>
 				<div class="col-sm-4 blue-col">
 					<img src="img/blog.png" />
-					<br/>
-					Blog
+					<h4>BLOG</h4>
 					<p>Read about what makes me tick. Topics range from tech to food to music, entertainment and back. Anything is fair game here. Feel free to comment on the post to keep topics alive</p>
-				</div>
-			</div>
-			<div class="flexrow">
-				<div class="col-sm-4 blue-col">
-					<input type="submit" value="Read More"/>
-				</div>
-
-				<div class="col-sm-4 blue-col">
-					<input type="submit" value="Read More"/>
-				</div>
-				<div class="col-sm-4 blue-col">
-					<input type="submit" value="Read More"/>
+					<div class="spacer"></div>
+					<a class="no-hover no-visited no-focus" href="#"><span class="orange-border-cta">READ MORE</span></a>
 				</div>
 			</div>
 		</div>
@@ -176,7 +169,7 @@
 	<!-- End BLogs -->
 
 	<!-- Testimonials -->
-	<div class="testimonials">
+	<!--<div class="testimonials">
 		<div class="container-fluid text-center">
 			<h2>Testimonials</h2>
 		</div>
