Git and LInkedin Header icons. Fix menu to the right.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 								<li><a href="#"><img src="./img/Facebook.png"/></a></li>
 								<li><a href="#"><img src="./img/Twitter.png"/></a></li>
 								<li><a href="#"><img src="./img/Google.png"/></a></li>
-								<li><a href="#"><img src="./img/Pinterest.png"/></a>+</li>
+								<li><a href="#"><img src="./img/git.png"/></a></li>
+								<li><a href="#"><img src="./img/linkedin.png"/></a></li>
 							</ul>
 						</div>
 						<div class="menu_list">
@@ -37,7 +38,7 @@
 							    </div>
 							</form>
 						</div>
-						<div class="menu_list">
+						<div class="menu_list pull-right">
 							<ul class="list">
 								<li>BACKGROUND</li>
 								<li>BLOG</li>
