Added Gallery place holder images and finished transition section images.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 					<img src="img/face.png" />
 			</div>
 			<div class="col-sm-6 about-text">
-				
 				<h2>About Me</h2>
 				<h3>JOHN ZEREN</h3>
 				<hr/>
@@ -83,6 +82,7 @@
 	<div class="highlights">
 		<div class="bottomtransition">
 		</div>
+		<div class="spacer"></div>
 		<div class="container-fluid text-center">
 			<div class="flexrow">
 				<div class="col-sm-4 blue-col">
@@ -110,20 +110,47 @@
 				</div>
 			</div>
 		</div>
+		<div class="toptransition-gallery">
+		</div>
 	</div>
 	<!-- End Highlighted Sections -->
 	
 	<!-- Gallery -->
+
 	<div class="gallery">
 		<div class="container-fluid text-center">
 			<h2>Our Gallery</h2>
-			asdfasd
+			<div class="spacer"></div>	
+			<div class="flexrow">
+				<div class="col-sm-4">
+					<img class="gimage" src="./img/tempphoto.png"/>
+				</div>
+				<div class="col-sm-4">
+					<img class="gimage-alt"src="./img/tempphoto.png"/>
+				</div>
+				<div class="col-sm-4">
+					<img class="gimage" src="./img/tempphoto.png"/>
+				</div>
+			</div>
+			<div class="flexrow">
+				<div class="col-sm-4">
+					<img class="gimage" src="./img/tempphoto.png"/>
+				</div>
+				<div class="col-sm-4">
+					<img class="gimage-alt" src="./img/tempphoto.png"/>
+				</div>
+				<div class="col-sm-4">
+					<img class="gimage" src="./img/tempphoto.png"/>
+				</div>
+			</div>
 		</div>
 	</div>
 	<!-- End Gallery -->
 
 	<!-- Blogs -->
 	<div class="blogs">
+		<div class="bottomtransition-gallery">
+		</div>
 		<div class="container-fluid text-center">
 			<h2>Recent Blogs</h2>
 			<div class="flexrow">
@@ -165,6 +192,8 @@
 					
 				</div>
 			</div>
+		</div>
+		<div class="toptransition-grey">
 		</div>
 	</div>
 	<!-- End BLogs -->
