Added bottom transition for contact section.

--- a/page2.html
+++ b/page2.html
@@ -92,6 +92,8 @@
 	
 	<!-- Contact me -->
 	<div class="contact">
+		<div class="bottomtransition-inner">
+		</div>
 		<div class="container-fluid text-center">
 			<h2>Contact Me</h2>
 		</div>
