--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta name="viewport" content="initial-scale=1">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 		<link rel="stylesheet" href="style.css">
 	</head>
@@ -28,6 +29,9 @@
 					</div>
 					<div id="headerlogo">
 						<img src="./img/logo.png"/>
+					</div>
+					<div id="hamburger">
+						<img src="./img/hamburger-100.png"/>
 					</div>
 					<div class="top_right">
 						<div class="searchbar">
