Mobile for contact section

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 			<h2>Contact Me</h2>
 		</div>
 		<div class="container-fluid">
-			<div class="col-sm-4">
+			<div class="col-sm-4 contact-additional">
 				<div>
 					<img src="./img/address.png"/>
 					<div class="contact-info">
