Keeping page2 in sync for mobile changes.

--- a/page2.html
+++ b/page2.html
@@ -29,6 +29,9 @@
 					<div id="headerlogo">
 						<img src="./img/logo.png"/>
 					</div>
+					<div id="hamburger">
+						<img src="./img/hamburger-100.png"/>
+					</div>
 					<div class="top_right">
 						<div class="searchbar">
 							<form id="search-form">
@@ -66,6 +69,7 @@
 				<hr/>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus eu dolor ac tempor. Etiam pharetra mauris vel tristique vehicula. Fusce eleifend odio eget nisi dapibus consectetur. Proin eu convallis nunc, sit amet semper risus. Pellentesque at facilisis purus. Etiam et lorem placerat, consequat ligula in, euismod mauris. Ut in elit eu elit finibus finibus id eget ipsum. Donec a est diam. Fusce facilisis nisi id nunc convallis, sed convallis lorem congue. Nulla facilisi. Vestibulum neque quam, mattis ac ligula vel, consectetur consectetur metus. Morbi aliquam orci sit amet velit suscipit tincidunt. Etiam condimentum efficitur mi, et elementum augue placerat non. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 				<a class="no-hover no-visited no-focus" href="#"><span class="blue-cta">READ MORE</span></a>
+				<div class="spacer"></div>
 			</div>
 		</div>
 	</div>
@@ -98,7 +102,7 @@
 			<h2>Contact Me</h2>
 		</div>
 		<div class="container-fluid">
-			<div class="col-sm-4">
+			<div class="col-sm-4 contact-additional">
 				<div>
 					<img src="./img/address.png"/>
 					<div class="contact-info">
