Cleaned up footer to be centered so it works in mobile too.

--- a/index.html
+++ b/index.html
@@ -302,10 +302,8 @@
 	<!-- Footer -->
 	<div id="footer">
 		<div class="container-fluid">
-			<div class="footer-left">
-				<img src="./img/logo_yellow.png"/>
-			</div>
-			<div class="footer-right">
+			<div class="footer-mobile">
+				<div><img src="./img/logo_yellow.png"/></div>
 				<div>
 					<ul class="list footer_menu_list">
 						<li>Home</li>
@@ -321,7 +319,6 @@
 					<p>John Zeren &copy; 2020 All Rights Reservied. Privacy Policy | Terms and Conditions</p>
 				</div>
 			</div>
-
 		</div>
 	</div>
 	<!-- End Footer-->
