Updated footer on page 2.

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
 	<!-- Footer -->
 	<div id="footer">
 		<div class="container-fluid">
-			<div class="footer-mobile">
+			<div>
 				<div><img src="./img/logo_yellow.png"/></div>
 				<div>
 					<ul class="list footer_menu_list">
@@ -322,5 +322,4 @@
 		</div>
 	</div>
 	<!-- End Footer-->
-
 </html>
