--- a/page2.html
+++ b/page2.html
@@ -171,10 +171,8 @@
 	<!-- Footer -->
 	<div id="footer">
 		<div class="container-fluid">
-			<div class="footer-left">
-				<img src="./img/logo_yellow.png"/>
-			</div>
-			<div class="footer-right">
+			<div>
+				<div><img src="./img/logo_yellow.png"/></div>
 				<div>
 					<ul class="list footer_menu_list">
 						<li>Home</li>
@@ -190,7 +188,6 @@
 					<p>John Zeren &copy; 2020 All Rights Reservied. Privacy Policy | Terms and Conditions</p>
 				</div>
 			</div>
-
 		</div>
 	</div>
 	<!-- End Footer-->
