Style clean up.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<!-- Header Start -->
 	<div id="header">
-		<div class="header_wrap container-fluid">
+		<div class="container-fluid">
 			<div class="top_row">
 				<div class="flexrow">
 					<div class="top_left">
@@ -67,7 +67,7 @@
 							<ul class="list">
 								<li>BACKGROUND</li>
 								<li>BLOG</li>
-								<li>CONTACT US</li>
+								<li>CONTACT</li>
 							</ul>
 						</div>
 					</div>
@@ -254,8 +254,8 @@
 		<div class="container-fluid text-center">
 			<h2>Contact Me</h2>
 		</div>
-		<div class="container-fluid">
-			<div class="col-sm-4 contact-additional">
+		<div class="container-fluid row">
+			<div class="contact-additional column">
 				<div>
 					<img src="./img/address.png"/>
 					<div class="contact-info">
@@ -277,7 +277,7 @@
 					<img src="./img/socialicons.png"/>
 				</div>
 			</div>
-			<div class="col-sm-8">
+			<div class="column66">
 				<form>
 					<div>
 						<label for="first">First Name</label>
