Page styles added to inner pages.

--- a/page2.html
+++ b/page2.html
@@ -80,19 +80,22 @@
 	<!-- Header End -->
 
 	<!-- About Me -->
-	<div class="about">
+	<div class="page">
 		<div class="container-fluid">	
-			<div class="col-sm-6 about-image">
-					<img src="img/face.png" />
+			<div class="crumbs">
+				<p>Home  <b>>></b> </p><p class="activepage">Open Source of Grabbit</p>
+				<hr class="clear blueline"/>
 			</div>
-			<div class="col-sm-6 about-text">
-				<h2>About Me</h2>
-				<h3>JOHN ZEREN</h3>
-				<hr/>
+			<div class="blog-featured">
+				<img src="./img/blog1.png">
+			</div>
+				
+
+				<h2>Open Source of Grabbit</h2>
+				<p>This entry was posted in <a href="#">News Technology</a> on April 12, 2015 by John Zeren
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus eu dolor ac tempor. Etiam pharetra mauris vel tristique vehicula. Fusce eleifend odio eget nisi dapibus consectetur. Proin eu convallis nunc, sit amet semper risus. Pellentesque at facilisis purus. Etiam et lorem placerat, consequat ligula in, euismod mauris. Ut in elit eu elit finibus finibus id eget ipsum. Donec a est diam. Fusce facilisis nisi id nunc convallis, sed convallis lorem congue. Nulla facilisi. Vestibulum neque quam, mattis ac ligula vel, consectetur consectetur metus. Morbi aliquam orci sit amet velit suscipit tincidunt. Etiam condimentum efficitur mi, et elementum augue placerat non. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-				<a class="no-hover no-visited no-focus" href="#"><span class="blue-cta">READ MORE</span></a>
-				<div class="spacer"></div>
-			</div>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus eu dolor ac tempor. Etiam pharetra mauris vel tristique vehicula. Fusce eleifend odio eget nisi dapibus consectetur. Proin eu convallis nunc, sit amet semper risus. Pellentesque at facilisis purus. Etiam et lorem placerat, consequat ligula in, euismod mauris. Ut in elit eu elit finibus finibus id eget ipsum. Donec a est diam. Fusce facilisis nisi id nunc convallis, sed convallis lorem congue. Nulla facilisi. Vestibulum neque quam, mattis ac ligula vel, consectetur consectetur metus. Morbi aliquam orci sit amet velit suscipit tincidunt. Etiam condimentum efficitur mi, et elementum augue placerat non. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 		</div>
 	</div>
 	<!-- End About Me -->
@@ -118,13 +121,11 @@
 	
 	<!-- Contact me -->
 	<div class="contact">
-		<div class="bottomtransition-inner">
-		</div>
 		<div class="container-fluid text-center">
 			<h2>Contact Me</h2>
 		</div>
-		<div class="container-fluid">
-			<div class="col-sm-4 contact-additional">
+		<div class="container-fluid row">
+			<div class="contact-additional column">
 				<div>
 					<img src="./img/address.png"/>
 					<div class="contact-info">
@@ -146,7 +147,7 @@
 					<img src="./img/socialicons.png"/>
 				</div>
 			</div>
-			<div class="col-sm-8">
+			<div class="column66">
 				<form>
 					<div>
 						<label for="first">First Name</label>
