Fixed missing bottom transition to contact section.

--- a/page2.html
+++ b/page2.html
@@ -79,7 +79,7 @@
 	</div>
 	<!-- Header End -->
 
-	<!-- About Me -->
+	<!-- Page Start -->
 	<div class="page">
 		<div class="container-fluid">	
 			<div class="crumbs">
@@ -97,8 +97,10 @@
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin cursus eu dolor ac tempor. Etiam pharetra mauris vel tristique vehicula. Fusce eleifend odio eget nisi dapibus consectetur. Proin eu convallis nunc, sit amet semper risus. Pellentesque at facilisis purus. Etiam et lorem placerat, consequat ligula in, euismod mauris. Ut in elit eu elit finibus finibus id eget ipsum. Donec a est diam. Fusce facilisis nisi id nunc convallis, sed convallis lorem congue. Nulla facilisi. Vestibulum neque quam, mattis ac ligula vel, consectetur consectetur metus. Morbi aliquam orci sit amet velit suscipit tincidunt. Etiam condimentum efficitur mi, et elementum augue placerat non. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 		</div>
+		<div class="toptransition-grey">
+		</div>
 	</div>
-	<!-- End About Me -->
+	<!-- End Page -->
 
 	<!-- Testimonials -->
 	<!--<div class="testimonials">
