adding theme and updating style for font-sizes.

--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,8 @@
 			}
 		</script>
 	</head>
+	<body>
+<div class="wrapper">
 	<!-- Header Start -->
 	<div id="header-inner-page">
 		<div class="header_wrap container-fluid">
@@ -194,5 +196,6 @@
 		</div>
 	</div>
 	<!-- End Footer-->
-
+</div>
+</body>
 </html>
