WP Theme updates, new images, style corrections.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<!-- Header Start -->
 	<div id="header">
-		<div class="container-fluid">
+		<div class="container-fluid squeeze">
 			<div class="top_row">
 				<div class="flexrow">
 					<div class="top_left">
